# ridicrypt-py

./: .gitignore  Cargo.toml  pyproject.toml  requirements.txt
example/: decrypt.py
package/ridicrypt/: __init__.py  __init__.pyi  datastores.pyi  decrypt.pyi  global_key.pyi  settings.pyi  utils.pyi
src/: datastores.rs  decrypt.rs  global_key.rs  lib.rs  py_utils.rs  settings.rs  utils.rs
